--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -125,7 +125,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve smuhy a tresky s krenovou jogurtovou omackou, pecene baby brambory, salatek 169</li><li>Grilovany recky veprovy kebab Souvlaki, okurkove tzatziki, zeleninovy kuskus, salatek {L} 139</li><li>Bramborove gnocchi s trhanou danci pleci pecenou na cervenem vine a korenove zelenine, parmezan, salatek {L} 169</li><li>Indicky dal z cervene cocky s pak coj, rajcaty ajowanem a sazenym vejcem, jasminova ryze, salatek 139</li></ol>
+<ol><li>Bengalska pikantni korma s kousky rybich filetu {makrela, hejk, treska}, lilky, paprikami, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Peceny filet z cerstve prazmy s citronem a susenymi rajcaty, frijoles refritos {mexicke stouchane fazole}, salatek 175</li><li>Pad kra pao – thajske restovane veprove s chilli, cesnekem, thajskou bazalkou a sazenym vajickem, jasminova ryze, salatek 139</li><li>Italske hraskove rizoto s uzenym hovezim pastrami, susenymi rajcaty a parmezanem, salatek 169</li><li>Indicke batatove placicky s fazolemi, smazenou cibulkou a koriandrem, pecene brambory, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
