Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 29. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka z červené řepy</strong>
+<strong>Čočková s uzeným</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na smetaně a tymiánu s rýží</strong>
+<strong>Vepřový perkelt s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Sladká rýže se švestkami</strong>
+<strong>Zapečené brambory s uzeným masem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							105,-
+							125,-
 						</span>
 </p>
 <p>
