Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Úterý, 30. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková s uzeným</strong>
+<strong>Tomatová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřový perkelt s rýží</strong>
+<strong>Uzená krkovička s bramborovou kaší a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Zapečené brambory s uzeným masem a okurkou</strong>
+<strong>Caesar salát s kuřecím masem, parmazánem a krutonky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							129,-
 						</span>
 </p>
 <p>
@@ -153,7 +153,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Bengalska pikantni korma s kousky rybich filetu {makrela, hejk, treska}, lilky, paprikami, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Peceny filet z cerstve prazmy s citronem a susenymi rajcaty, frijoles refritos {mexicke stouchane fazole}, salatek 175</li><li>Pad kra pao – thajske restovane veprove s chilli, cesnekem, thajskou bazalkou a sazenym vajickem, jasminova ryze, salatek 139</li><li>Italske hraskove rizoto s uzenym hovezim pastrami, susenymi rajcaty a parmezanem, salatek 169</li><li>Indicke batatove placicky s fazolemi, smazenou cibulkou a koriandrem, pecene brambory, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a ancovickovym dresinkem s celozrnnou horcici, bramborovy salat s cerstvymi okurkami, petrzelkou, jogurtem a majonezou 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a ancovickovym dresinkem s celozrnnou horcici, bramborovy salat s cerstvymi okurkami, petrzelkou, jogurtem a majonezou 169</li><li>Enchiladas s krutim masem, fazolemi a paprikami zapecene v rajcatove omacce s goudou, jasminova ryze, salatek {L} 139</li><li>Indicke birjany z basmati ryze s pecenymi bazantimi stehynky, zeleninou a susenymi merunkami, jogurtovy dip salatek 169</li><li>Fusilli s omackou z hlivy a portobello se smetanou, lanyzovym olejem a parmezanem, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
