Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,6 +52,21 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 30.11.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Míša dort bez lepku </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s hruškami a mandlemi</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Vanilková pěna s drobenkou s lesním ovocem</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Dýňový krém, zázvor, chilli samostatně  <em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
