Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,6 +52,21 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 1.12.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Tvarožník</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Vanilková pěna s drobenkou s lesním ovocem</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s hruškami a mandlemi</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Kuřecí kaldoun, kořenová zelenina, vaječné nudle- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
@@ -153,7 +168,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a ancovickovym dresinkem s celozrnnou horcici, bramborovy salat s cerstvymi okurkami, petrzelkou, jogurtem a majonezou 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a ancovickovym dresinkem s celozrnnou horcici, bramborovy salat s cerstvymi okurkami, petrzelkou, jogurtem a majonezou 169</li><li>Enchiladas s krutim masem, fazolemi a paprikami zapecene v rajcatove omacce s goudou, jasminova ryze, salatek {L} 139</li><li>Indicke birjany z basmati ryze s pecenymi bazantimi stehynky, zeleninou a susenymi merunkami, jogurtovy dip salatek 169</li><li>Fusilli s omackou z hlivy a portobello se smetanou, lanyzovym olejem a parmezanem, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se salsou z cerstvych rajcat s cervenou cibuli, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka a lososa se salsou z cerstvych rajcat s cervenou cibuli, korenena ryze s beluga cockou, salatek 169</li><li>Kasmirska hovezi korma s kokosovym mlekem, orisky, a pecenou dyni, jasminova ryze 139</li><li>Smazene rizecky ze seleciho hrbetu a kyty, bramborovy salat s cerstvymi okurkami, jogurtem a majonezou, citron {L} 169</li><li>Pecene papriky plnene frijoles refritos {stouchane fazole} se lnenym seminkem, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
