Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Středa, 01. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová</strong>
+<strong>Vývar se zeleninou a hovězím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Uzená krkovička s bramborovou kaší a okurkou</strong>
+<strong>Smažený sýr s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Caesar salát s kuřecím masem, parmazánem a krutonky</strong>
+<strong>Hrachová kaše s klobásou, cibulkou a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							127,-
 						</span>
 </p>
 <p>
